Netology/22.k8s/22.5 Ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-5
  labels:
    app: "deploy-nginx"
    hw: "5"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - name: nginx-port
              containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-5
  labels:
    app: "deploy-multitool"
    hw: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - name: multitool-port
              containerPort: 8088
