Netology/22.k8s/22.5 Ingress/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi
  labels:
    name: multi
spec:
  containers:
  - name: multi
    image: wbitt/network-multitool
    ports:
      - containerPort: 8090
