Netology/22.k8s/22.5 Ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-svc
      port: 80
      targetPort: nginx-port

---

apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  selector:
    app: multitool
  ports:
    - name: multitool-svc
      port: 8088
      targetPort: multitool-port
