Netology/22.k8s/22.5 Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hw-5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: multitool-svc
            port: 
              number: 8088
